--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
                   </div>
             </div>
             <div class="rider-img">
-                <img style="width: 530px;height: 500px;transform:translateY(130%); " src="./assets/img/merchant@2x.jpg" alt="">
+                <img style="width: 530px;height: 500px;transform:translateY(130%);
+                ms-transform: translateY(120%)
+                ; " src="./assets/img/merchant@2x.jpg" alt="">
             </div>
         </div>
         
