--- a/index.html
+++ b/index.html
@@ -102,10 +102,9 @@
                     >
                   </div>
             </div>
-            <div class="rider-img">
-                <img style="width: 530px;height: 500px;transform:translateY(130%);
-                ms-transform: translateY(120%)
-                ; " src="./assets/img/merchant@2x.jpg" alt="">
+            <div class="rider-img merchantsts-img">
+                <img style="width: 530px;height: 460px;;
+               " src="./assets/img/merchant@2x.jpg" alt="">
             </div>
         </div>
         
